<resources>
    <string name="app_name">My App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="photos">PHOTOS</string>
    <string name="description">Description</string>
    <string name="person_image">Person Image</string>
    <string name="list_image">image</string>
    <string name="name">NAME</string>
    <string name="profile">PROFILE</string>
    <string name="location">Location</string>
    <string name="bio">Bio</string>
</resources>