<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:srcCompat="@drawable/img_icon"
            app:layout_constraintDimensionRatio="415:170"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/margin_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/list_image"/>

        <TextView android:textSize="16sp"
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_margin="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/margin_10"
            android:elevation="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.11"
            app:circularflow_defaultRadius="@dimen/margin_10"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/avatars"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:contentDescription="@string/person_image"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_person_name"
            android:textSize="18sp"
            android:textColor="@color/color_d26471"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="@dimen/margin_10"
            app:layout_constraintTop_toTopOf="@+id/card_view"
            app:layout_constraintBottom_toBottomOf="@+id/card_view"
            app:layout_constraintStart_toEndOf="@+id/card_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line_title"
        android:background="#20000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintTop_toBottomOf="@+id/list_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>